# Medblock

./: Cargo.toml  README.md  dev.sh  dfx.json  portforward.sh  rustfmt.toml  utils.sh
.github/workflows/: deploy-internal-dashboard.yml  deploy-web-app.yml  deploy-web-pwa.yml
canister/: .gitignore  Cargo.toml  README.md  build.sh  canister_ids.json  dec.sh  deploy-local.sh  dfx.json  rustfmt.toml  setup.sh
canister/.cargo/: config.toml
canister/docs/: group-management-pr.md
canister/scripts/: README.md
canister/scripts/declaration/: README.md  generate_declaration.sh
canister/scripts/deployments/: README.md  local.sh  mainnet.sh  reinstall-staging.sh  upgrade-vps.sh  vps.sh
canister/scripts/upgrades/: README.md
canister/scripts/upgrades/mainnet/: upgrade-emr.sh  upgrade-patient.sh  upgrade-provider.sh
canister/scripts/upgrades/staging/: upgrade-emr.sh  upgrade-patient.sh  upgrade-provider.sh
canister/scripts/utils/: README.md  add_admin.sh  add_controller.sh  add_controller_all.sh  add_metrics_collector.sh  add_provider.sh  log.sh
canister/src/canister-common/: Cargo.toml
canister/src/canister-common/src/: common.rs  id_generator.rs  lib.rs  macros.rs  mmgr.rs  random.rs  response.rs  stable.rs  statistics.rs  test_utils.rs
canister/src/canister_common/: Cargo.toml
canister/src/canister_common/src/: common.rs  id_generator.rs  lib.rs  macros.rs  mmgr.rs  random.rs  stable.rs  statistics.rs
canister/src/canister_common/tests/: alloc.rs  common.rs
canister/src/emr-registry/: Cargo.toml
canister/src/emr-registry/src/: key.rs  lib.rs  registry.rs
canister/src/emr_registry/: Cargo.toml  candid.did
canister/src/emr_registry/src/: api.rs  config.rs  header.rs  key.rs  lib.rs  memory.rs  registry.rs
canister/src/heap_clone/: Cargo.toml
canister/src/heap_clone/src/: lib.rs
canister/src/heap_clone_derive/: Cargo.toml
canister/src/heap_clone_derive/src/: lib.rs
canister/src/medblock/: Cargo.toml  medblock.did
canister/src/medblock/src/: api_types.rs  config.rs  errors.rs  internal_types.rs  lib.rs  log.rs  macros.rs  random.rs  types.rs  utils.rs  vetkd.rs
canister/src/medblock/src/emr/: binding.rs  core.rs  key.rs  mod.rs  patient.rs  providers.rs
canister/src/medblock/src/encryption/: mod.rs  vetkd.rs
canister/src/medblock/src/heap/: boxed.rs  map.rs  mod.rs
canister/src/medblock/src/mem/: mod.rs  shared.rs
canister/src/patient-registry/: Cargo.toml
canister/src/patient-registry/src/: registry.rs
canister/src/patient_registry/: Cargo.toml  build.rs  candid.did
canister/src/patient_registry/src/: api.rs  config.rs  consent.rs  lib.rs  log.rs  memory.rs  registry.rs
canister/src/patient_registry/src/declarations/: emr_registry.rs  mod.rs  provider_registry.rs
canister/src/patient_registry/src/encryption/: mod.rs  vetkd.rs
canister/src/provider-registry/: Cargo.toml  build.rs  provider-registry.did
canister/src/provider-registry/src/: config.rs  lib.rs  registry.rs  types.rs
canister/src/provider_registry/: Cargo.toml  build.rs  candid.did
canister/src/provider_registry/src/: api.rs  config.rs  lib.rs  memory.rs  registry.rs
canister/src/provider_registry/src/declarations/: emr_registry.rs  mod.rs  patient_registry.rs
canister/src/src/declarations/provider-registry/: index.d.ts  index.js
canister/tests/integration-tests/: Cargo.toml  build.rs
canister/tests/integration-tests/src/declarations/: emr_registry.rs  mod.rs  patient_registry.rs  provider_registry.rs
canister/tests/integration-tests/tests/: registry.rs
canister/tests/integration-tests/tests/common/: mod.rs
canister/tests/integration-tests/tests/registry_tests/: group_tests.rs  kyc_tests.rs  mod.rs  patient_tests.rs
canister/tests/integration-tests/tests/registry_tests/group/: basic_operations_tests.rs  emr_access_tests.rs  error_handling_tests.rs  group_details_tests.rs  mod.rs  pagination_tests.rs
canister/tests/pocket-ic-bindgen/: Cargo.toml
canister/tests/pocket-ic-bindgen/src/: lib.rs
canister/tests/pocket-ic-bindgen/src/test_data/: a.rs  b.rs
demo/mobile/: .babelrc  .env.template  .gitignore  App.tsx  app.json  babel.config.js  i18n.ts  package.json  tailwind.config.js  tsconfig.json
demo/mobile/android/: build.gradle  link-assets-manifest.json  settings.gradle
demo/mobile/ios/: Podfile
demo/pwa/: .eslintrc.json  .gitignore  next.config.js  package.json  structure  tailwind.config.js
demo/pwa/public/: manifest.json  sw.js  sw.js.map
demo/pwa/src/: Store.ts  actor.ts  types.ts
demo/web/: .eslintrc.json  .gitignore  dfx.json  dfx.webpack.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
demo/web/src/: Store.ts  globals.css  types.ts
final_demo/pwa/: .env.template  .gitignore  Dockerfile.pwa  README.md  bun.lockb  cek cicd  dfx.json  docker-compose.yml  next.config.js  package.json
final_demo/pwa/public/: manifest.json  sw.js  sw.js.map
final_demo/web/: .env.example  Dockerfile.webapp  README.md  bun.lockb  docker-compose.yml  next.config.js  package.json
internal-dashboard/: .env.example  .eslintignore  .eslintrc.json  Dockerfile  README.md  bun.lockb  docker-compose.yml  next-auth.d.ts  package.json
internal-dashboard/src/app/: layout.tsx
internal-dashboard/src/config/: agent.ts
internal-dashboard/src/hooks/: useAdmin.ts  useAuth.ts  usePatient.ts  useProvider.ts
internal-dashboard/src/layouts/: auth.tsx  dashboard.tsx
internal-dashboard/src/providers/: chakra-ui.tsx  ic-reactor.tsx  next-auth.tsx  react-query.tsx
internal-dashboard/src/services/: patients.ts  providers.ts
internal-dashboard/src/store/: patients.store.tsx  providers.store.tsx
internal-dashboard/src/utils/: calculate-age.ts  provider.tsx
src/medblock/: Cargo.toml
src/medblock/src/: access_control.rs  encryption.rs  lib.rs  log.rs  macros.rs  types.rs  vetkd.rs  wrapper.rs
src/medblock/src/emr/: binding.rs  mod.rs  providers.rs  schema.rs
src/vetkey_test_rust_backend/: Cargo.toml
src/vetkey_test_rust_backend/src/: index.rs  lib.rs  macros.rs  mem.rs  types.rs  wrapper.rs
(+604 files in other folders)
