[workspace]
resolver = "2"
members = ["src/canister-common", "src/provider-registry", "src/emr-registry", "src/patient-registry"]

[workspace.dependencies]
ic-cdk = "0.13.1"
candid = "0.10.4"
ic-stable-memory = "0.4"
paste = "1.0.14"
serde = "1.0.193"
ic-stable-structures = "0.6.2"
parity-scale-codec = { default-features = false, version = "3.6.9", features = [
    "derive",
] }
ic_principal = "0.1.1"
oorandom = "11.1.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

hex = "0.4.3"
thiserror = "1.0.50"
uuid = { default-features = false, version = "1.6.1" }


ic-cdk-timers = "0.7.0"


serde_json = { version = "1.0.108", features = [
    "alloc",
], default-features = false }

chrono = "0.4.19"
