[package]
name = "medblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
candid = "0.9.11"
ciborium = "0.2.1"
hex = "0.4.3"
ic-cdk = "0.11.3"
ic-cdk-timers = "0.5.1" # Feel free to remove this dependency if you don't need timers
ic-stable-memory = "0.4"
paste = "1.0.14"
serde = "1.0.193"
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["fast-rng", "serde", "js", "v4"] }

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
