[package]
name = "medblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
ciborium = "0.2.1"
hex = "0.4.3"
ic-cdk = "0.11.0"
candid = "0.8.4"
ic-cdk-timers = "0.5.1" # Feel free to remove this dependency if you don't need timers
ic-stable-memory = "0.4"
paste = "1.0.14"
serde = "1.0.193"
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["fast-rng", "serde", "js", "v4"] }
serde_json = { version = "1.0.108", features = ["alloc"], default-features = false }

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
