[package]
name = "vetkey_test_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
ciborium = "0.2.1"
ic-cdk = "0.11.3"
ic-cdk-timers = "0.5.1" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.0"
paste = "1.0.14"
serde = "1.0.192"
