[package]
name = "canister-common"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-stable-structures = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
] }
serde = { workspace = true }
candid = { workspace = true }
uuid = { workspace = true, default-features = false, features = ["serde"] }
thiserror = { workspace = true }
ic-cdk = { workspace = true }
ic_principal = { workspace = true }
ciborium = "0.2.2"
ic-cdk-timers = { workspace = true }
oorandom = { workspace = true }
tiny-keccak = { workspace = true }
hex = { workspace = true }

[features]
default = []
test-utils = []

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt"] }
paste = { workspace = true }


# for getting timestamp outside of canister execution environment
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.19"

[dev-dependencies]
serde_json = { workspace = true }
serde_assert = { workspace = true }