[package]
name = "canister_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-stable-structures = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
candid = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
paste = { workspace = true }


# for getting timestamp outside of canister execution environment
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.19"
