[package]
name = "medblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
ciborium = "0.2.1"
hex = "0.4.3"
ic-cdk = { workspace = true }
candid = { workspace = true }
ic-cdk-timers = { workspace = true } # Feel free to remove this dependency if you don't need timers
ic-stable-memory = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
parity-scale-codec = { workspace = true }
ic-stable-structures = { workspace = true }
thiserror = "1.0.50"
uuid = { version = "1.6.1", default-features = false, features = [
    "serde",
    "v7",
] }
serde_json = { version = "1.0.108", features = [
    "alloc",
], default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
ic_principal = { workspace = true }

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
uuid = { version = "1.6.1", default-features = false, features = [
    "serde",
    "v4",
] }

# for getting timestamp outside of canister execution environment
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.19"
