[package]
name = "medblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = { workspace = true }
# ic-cdk = { workspace = true }
# candid = { workspace = true }
# ic-cdk-timers = { workspace = true }        # Feel free to remove this dependency if you don't need timers
ic-stable-memory = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
parity-scale-codec = { workspace = true }
ic-stable-structures = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
ic_principal = { workspace = true }

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
uuid = { version = "1.6.1", default-features = false, features = [
    "serde",
    "v4",
] }
