[package]
name = "patient-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
canister-common = { path = "../canister_common" }
ic-cdk = { workspace = true }
candid = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
parity-scale-codec = { workspace = true }
ic-stable-structures = { workspace = true }
thiserror = { workspace = true }
ic_principal = { workspace = true }
uuid = { workspace = true }
