[package]
name = "patient_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
canister-common = { path = "../canister-common" }
ic-cdk = { workspace = true }
candid = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
] }
ic-stable-structures = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
hex = { workspace = true }
ic_principal = { workspace = true }
canistergeek_ic_rust = { workspace = true }

[dev-dependencies]
uuid = { workspace = true, default-features = false, features = [
    "serde",
    "v4",
] }
tiny-keccak = { workspace = true }
canister-common = { path = "../canister-common", features = ["test-utils"] }


[features]
default = []
vetkd = []

[build-dependencies]
ic-cdk-bindgen = { workspace = true }
